correccion header responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -332,6 +332,7 @@ footer p{
     header{
         position: sticky;
         top: 0;
+        z-index: 1;
     }
     .checkbtn{
         display: block;
