--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,315 +15,6 @@ body{
 
 //header
 
-header{
-    display: flex;
-     background-color: #8a2be2;
-     height: 100px; 
-    
-     .título-principal{
-        text-align: left;
-        width: 65%;
-        max-width: 65%;
-        max-height: 100%;
-        color: hsl(208, 100%, 97%);
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 2rem;
-    }
-
-    nav{
-        display: flex;
-         height: 100px;
-         width: 35vw;
-         text-decoration: none;
-         align-items: center;
-
-         .checkbtn{
-            font-size: 40px;
-            color: hsl(208, 100%, 97%);
-            cursor: pointer;
-            display: none;
-        }
-        
-        #check{
-            display: none;
-        }
-        
-        ul{
-            li{
-                display: inline-block;
-                color: hsl(208, 100%, 97%);
-                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                font-size: 1.25rem;
-                margin: 0px 5px;
-    
-                a{
-                    text-decoration: none;
-                }
-
-                .header-footer{
-                    &:link{
-                    color: hsl(208, 100%, 97%);
-                    }
-                   
-                    &:visited{
-                        color: hsl(208, 100%, 97%);
-                    }
-
-                    &:hover{
-                        color:rgb(84, 36, 129);
-                        
-                    }
-
-                    &:active{
-                        color: rgb(156, 155, 155);
-                    }
-                }
-            }
-        }
-        
-    }
-}
-
-//Main, inicio
-
-.title{
-    flex: 1;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-decoration:underline; 
-}
-
-.subtitulo{
-    margin-left: 20vw;
-    margin-right: 20vw;
-        text-align: center;
-        font-family:Verdana, Geneva, Tahoma, sans-serif;
-    }
-
-    main div p{
-        margin-bottom: 10vh;
-    }
-
-.imagen-texto{
-    display: flex;
-     flex-flow: column wrap;
-     text-align: center;
-     align-content: flex-start;
-     padding: 0 20vw;
-     align-items: center;
-
-     img{
-        margin-bottom: 10px;
-        max-width: 100%;
-    }
-
-    p{
-        font-family:Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 1.25rem;
-    }
-
-}
-
-
-//globos tutoriales
-.globo-container{
-    text-align: center;
-    .globo{
-        margin: 20px 40px 20px 40px;
-        position: relative;
-        display: inline-block;
-        text-align: center;
-        box-sizing: border-box;
-        height: 100%;
-        padding: 1px;
-
-        img{
-            border-radius: 10px;
-        }
-        a{
-            h3{
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                padding-top: 7px;
-                position: absolute;
-                top: 80%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                background-color: black;
-                opacity: 50%;
-                height: 55px;
-                width: 280px;
-                color: aliceblue;
-                border-radius: 0px 0px 10px 10px;
-            }
-
-            .titulo-enlace {
-                cursor: pointer; 
-
-                &:active{
-                    color: #671faa;
-                }
-
-                &:hover {
-                    text-decoration: underline; 
-                }
-            }
-        }
-    }
-}
-
-//Marcas
-
-.marcas-container{
-    width: 80%;
-    margin: 0 10%;
-    display: grid;
-    grid-template-rows: auto;
-    text-align: center;
-
-    .marcas{
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        padding: 0 10%;
-
-        img{
-            width: 30vh;
-            margin: 2vh 0;
-        }
-
-        h3{
-            text-decoration: underline;
-            font-size: 5vh;
-        }
-
-        ul{
-            list-style: none;
-        }
-    }
-}
-
-//Contacto
-.formulario{
-    background-color: #44097c;
-    width: 60%;
-    margin: 5% 20% 10% 20%;
-    color: aliceblue;
-    height: 52vh;
-    display: grid;
-    grid-template-rows: 15% 15% 30% 10%;
-    
-    .info{
-        text-align: center; 
-        display: grid;
-        justify-content: center;
-        margin-top: 8vh;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
-        label{
-            grid-column: 1/4;
-        }
-
-        .input{
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            background-color: #44097c;
-            color: aliceblue;
-            border: none;
-            border-bottom: 1px solid silver;
-        }
-
-        textarea{
-            width: 30vw;
-            height: 10vh;
-        }
-
-        .submit{
-            width: 10vw;
-            height: 5vh;
-            border: none;
-            background-color: #8a2be2;
-            border-radius: 3vw;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            color: aliceblue;
-            font-size: 3vh;
-        }
-     }
-}
-
-//Tutoriales
-.tutorial{
-    text-align: center;
-    display: grid;
-    width: 80vw;
-    margin: 0 10vw 10vw 10vw;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    justify-items: center;
-
-    iframe{
-        width: 600px;
-        max-width: 80vw;
-        height: 60vh;
-    }
-
-    img{
-        width: 50vw; 
-     }
-
-    ul{
-        .tutorial-link{
-        text-align: left;
-        color: #671faa;
-
-            a{
-                &:hover{
-                    color:#9940ec;
-                }
-            }
-        }
-    } 
-}
-    
-//Footer
-footer{
-    position:absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: #671faa;
-    height: 100px;
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    margin-top: 1vh;
-
-    a{
-        text-decoration: none;
-        margin: 0px 5px 0px 5px;
-    }
-
-    p{
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: hsl(208, 100%, 97%);
-        margin-top: 12px;
-        margin-bottom: 12px;
-    }
-
-    .header-footer{
-        &:link{
-        color: hsl(208, 100%, 97%);
-        }
-       
-        &:visited{
-            color: hsl(208, 100%, 97%);
-        }
-
-        &:hover{
-            color:rgb(84, 36, 129);
-            
-        }
-
-        &:active{
-            color: rgb(156, 155, 155);
-        }
-}
-
-}
+@import"./componentes/navbar";
+@import"./componentes/main";
+@import"./componentes/footer";
