--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,6 @@ body{
 
 //header
 
-@import"./componentes/navbar";
-@import"./componentes/main";
-@import"./componentes/footer";
+@import"./partials/navbar";
+@import"./partials/main";
+@import"./partials/footer";
