--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ header .título-principal {
   color: hsl(208, 100%, 97%);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 2rem;
+  margin-left: 2vw;
 }
 header nav {
   display: flex;
@@ -89,7 +90,7 @@ header nav ul li .header-footer:active {
     padding-left: 20%;
   }
 }
-@media (max-width: 870px) {
+@media (max-width: 893px) {
   header {
     position: sticky;
     top: 0;
@@ -101,6 +102,7 @@ header nav ul li .header-footer:active {
     font-size: 2rem;
     min-width: 250px;
     max-height: 100px;
+    margin-left: 0;
   }
   header nav {
     display: flex;
@@ -145,14 +147,20 @@ header nav ul li .header-footer:active {
   }
 }
 @media (max-width: 500px) {
-  .checkbtn {
+  header {
+    align-items: center;
+  }
+  header .checkbtn {
     margin-right: 15%;
+  }
+  header .título-principal {
+    font-size: 1.5rem;
   }
 }
 @media (max-width: 370px) {
   .título-principal {
     padding-top: 2vh;
-    font-size: 1.75rem;
+    font-size: 0.5rem;
     align-items: center;
     min-width: 200px;
   }
@@ -333,13 +341,34 @@ main div p {
     margin-bottom: 4vh;
   }
 }
-@media (max-width: 870px) {
+@media (max-width: 893px) {
   .imagen-texto p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.9rem;
   }
   .tutoriales img {
     width: 80vw;
+  }
+}
+@media (max-width: 600px) {
+  main .formulario {
+    width: 70%;
+    margin: 5% 15% 10% 15%;
+    height: 54vh;
+  }
+  main .formulario .info textarea {
+    width: 40vw;
+    height: 10vh;
+  }
+  main .formulario .info .submit {
+    width: 20vw;
+    height: 5vh;
+    border: none;
+    background-color: #8a2be2;
+    border-radius: 3vw;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    color: hsl(208, 100%, 97%);
+    font-size: 3vh;
   }
 }
 @media (max-width: 500px) {
