--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -13,6 +13,7 @@ header{
         color: $color-letra;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 2rem;
+        margin-left: 2vw;
     }
 
     nav{
@@ -95,7 +96,7 @@ header{
         }
 }
 
-@media (max-width: 870px){    
+@media (max-width: 893px){    
     header{
         position: sticky;
         top: 0;
@@ -107,6 +108,7 @@ header{
             font-size: 2rem;
             min-width: 250px;
             max-height: 100px;
+            margin-left: 0;
         }  
 
         nav{
@@ -168,15 +170,23 @@ header{
 }
 
 @media (max-width: 500px){
+   header{
+    align-items: center;
+
     .checkbtn{
         margin-right: 15%;
     }
+
+    .título-principal{
+        font-size: 1.5rem;
+    }
+   } 
 }
 
 @media (max-width: 370px){
     .título-principal{
         padding-top: 2vh;
-        font-size: 1.75rem;
+        font-size: 0.5rem;
         align-items: center;
         min-width: 200px;
     }
